# network_butcher

./: .clang-format  .dockerignore  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CMake__directives_8h.html  CMake__directives_8h_source.html  CommonInfo.cmake  Dockerfile  Dockerfile_base  Dockerfile_test  Factory_8h.html  Factory_8h__dep__incl.map  Factory_8h__dep__incl.md5  Factory_8h__incl.map  Factory_8h__incl.md5  Factory_8h_source.html  README.md  README_8md.html  annotated.html  basic__keppstein_8h.html  basic__keppstein_8h__dep__incl.map  basic__keppstein_8h__dep__incl.md5  basic__keppstein_8h__incl.map  basic__keppstein_8h__incl.md5  basic__keppstein_8h_source.html  block__aMLLibrary__weight__importer_8cpp.html  block__aMLLibrary__weight__importer_8cpp__incl.map  block__aMLLibrary__weight__importer_8cpp__incl.md5  block__aMLLibrary__weight__importer_8h.html  block__aMLLibrary__weight__importer_8h__dep__incl.map  block__aMLLibrary__weight__importer_8h__dep__incl.md5  block__aMLLibrary__weight__importer_8h__incl.map  block__aMLLibrary__weight__importer_8h__incl.md5  block__aMLLibrary__weight__importer_8h_source.html  butcher_8h.html  butcher_8h__dep__incl.map  butcher_8h__dep__incl.md5  butcher_8h__incl.map  (+747 more)
cmake/: CMakeLists.txt  README.md
dep/: README.md  requirements.txt  requirments.txt
doc/: CMakeLists.txt
google_tests/: Butcher.cpp  Butcher_benchmark.cpp  CMakeLists.txt  General_Manager.cpp  IO_Manager.cpp  KFinder_Test_Graph_Specialization.h  TestClass.h  TestGraph.h  Tester.cpp  Utilities.cpp  Weighted_Graph_Graph_Specialization.h  general_manager.cpp  io_manager.cpp  test_class.h  test_graph.h  utilities.cpp  weighted_graph_specialization.h
google_tests/Butcher/: Butcher.cpp  Butcher_benchmark.cpp  Butcher_complete.cpp  Constrained_Block_Graph_Builder.cpp  Extra_Constraint.cpp  butcher.cpp  butcher_complete.cpp  constrained_block_graph_builder.cpp
google_tests/Computer/: Compiter_flops.cpp  Computer.cpp  Computer_memory.cpp  computer_memory.cpp
google_tests/Helpers/: GeneralManager.cpp  IO_Manager.cpp  Utilities.cpp
google_tests/Helpers/Computer/: Computer.cpp
google_tests/Helpers/K-shortest_path/: Shortest_path_finder.cpp  ksp.cpp
google_tests/Helpers/Types/: Dense_tensor.cpp
google_tests/IO_interaction/: Onnx_importer_helpers.cpp  Weight_importer_helpers.cpp  onnx_importer_helpers.cpp  weight_importer_helpers.cpp
google_tests/K-shortest_path/: KFinder.cpp  KFinder_benchmark.cpp  KFinder_complete.cpp  Shortest_path_finder.cpp  heap_eppstein.cpp  kfinder.cpp  kfinder_complete.cpp  shortest_path_finder.cpp
google_tests/Network/: Computer.cpp  Graph.cpp  Node.cpp  graph.cpp  node.cpp
google_tests/Onnx_interaction/: Onnx_importer_helpers.cpp  Weight_importer_helpers.cpp
google_tests/Types/: Dense_tensor.cpp  dense_tensor.cpp
include/: Butcher.h  CMakeLists.txt  General_Manager.h  IO_Manager.h  Model_reconstructor.h  Onnx_importer.h  README.md  Utilities.h  general_manager.h  io_manager.h  network_butcher.h  utilities.h
mains/: CMakeLists.txt  README.md  main.cpp
mains/Butcher/: main_Constrained_Builder.cpp
mains/IO_Manager/: main_IO_Manager.cpp
mains/KFinder/: main_kfinder.cpp  main_path_reconstruction.cpp  main_synthetic_graph.cpp
models/: aMLLibrary_prediction_pi.csv  aMLLibrary_prediction_tegra.csv  age_googlenet_shapes_only.onnx  operation_time_edge.csv  test2_parameters.conf  test3_parameters.conf  test4_parameters.conf  test_parameters.conf
onnx_proto/: onnx.pb.cc
output_final_network_test/: version-RFB-640-inferred-0-device-0.onnx  version-RFB-640-inferred-1-device-1.onnx  version-RFB-640-inferred-2-device-0.onnx  version-RFB-640-inferred-3-device-1.onnx  (+2 more)
presentation/: IO_Manager.tex  (+6 more)
src/: Butcher.cpp  Butcher.h  CMakeLists.txt  Farmer.cpp  Farmer.h  General_Manager.cpp  IO_Manager.cpp  Model_reconstructor.cpp  Onnx_importer.cpp  README.md  Utilities.cpp  general_manager.cpp  io_manager.cpp  main.cpp  utilities.cpp
src/APSC/: chrono.cpp
src/Butcher/: Extra_Constraint.cpp  Graph_Constraint.cpp  Path_Converter.cpp
src/Computer/: Computer_flops.cpp  Computer_time.cpp  Hardware_specifications.cpp
src/Helpers/: General_Manager.cpp  IO_Manager.cpp  IO_Manager.h  Memory_info.h  Operations_manager.cpp  Operations_manager.h  Utilities.cpp  Utilities.h
src/Helpers/APCS/: Factory.h  chrono.cpp
src/Helpers/APSC/: chrono.cpp
src/Helpers/Computer/: Computer_memory.cpp  Computer_memory.h  Computer_time.cpp  Computer_time.h  Hardware_specifications.cpp  Hardware_specifications.h
src/Helpers/K-shortest_path/: Heap.cpp  Heap.h  Heap_eppstein.cpp  Heap_eppstein.h  KEppstein.h  KEppstein_lazy.h  KFinder.h  Path_info.h  Shortest_path_finder.h  ksp.cpp  ksp.h
src/Helpers/Traits/: Basic_traits.h  Graph_traits.h  Hardware_traits.h  Heap_traits.h  Network_traits.h  Node_traits.h  Type_info_traits.h
src/Helpers/Types/: Content.h  Dense_tensor.cpp  Dense_tensor.h  Type_info.cpp  Type_info.h
src/IO_Interaction/: Onnx_importer_helpers.cpp  Onnx_model_reconstructor_helpers.cpp  Weight_importer_helpers.cpp  Yaml_importer_helpers.cpp  onnx_importer_helpers.cpp  onnx_model_reconstructor_helpers.cpp
src/IO_Interaction/Weight_Importer_Helpers/: Csv_Weight_Importer.cpp  Weight_Importer_Utils.cpp  abstract_aMLLibrary_weight_importer.cpp  basic_aMLLibrary_Weight_Importer.cpp  basic_aMLLibrary_weight_importer.cpp  block_aMLLibrary_Weight_Importer.cpp  block_aMLLibrary_weight_importer.cpp  csv_weight_importer.cpp  original_aMLLibrary_Weight_Importer.cpp  original_aMLLibrary_weight_importer.cpp  weight_importer_utils.cpp
src/K-shortest_path/: Heap_eppstein.cpp
src/Models/: operation_time_cloud.csv  prediction.csv  version-RFB-640-inferred.onnx
src/Network/: Computer.cpp  Computer.h  Content.h  Graph.h  Layer.h  MWGraph.h  Node.h  WGraph.h
src/Onnx_interaction/: Onnx_importer_helpers.cpp  Onnx_model_reconstructor_helpers.cpp
src/Onnx_model/: .gitignore  CMakeLists.txt  onnx  onnx.pb.cc  onnx.pb.h
src/Onnx_model/new/: CMakeLists.txt
src/Types/: Dense_tensor.cpp  dense_tensor.cpp
src/onnx_proto/: onnx.pb.cc
(+508 files in other folders)
